fix padding style

--- a/src/components/PageTitle/styles.scss
+++ b/src/components/PageTitle/styles.scss
@@ -5,6 +5,7 @@
   margin: 58px auto;
   max-width: 1076px;
   width: 100%;
+  padding: 0 16px;
 
   img {
     background-color: rgba(255, 255, 255, 0);
