--- a/src/pages/Dashboard/styles.scss
+++ b/src/pages/Dashboard/styles.scss
@@ -5,6 +5,7 @@
     line-height: 28px;
     font-weight: 300;
     margin-top: 3.22%;
+    padding-left: 16px;
   }
 }
 
@@ -19,6 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
+    padding-left: 16px;
 
     strong {
       color: #47525e;
